<resources>
    <string name="app_name">Car</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="cars">Cars</string>
    <string name="fav">Favorites</string>
    <string name="price">Price</string>
    <string name="battery">Battery</string>
    <string name="power">Power</string>
    <string name="recharge_time">Recharge</string>
    <string name="price_kwh">Price kWh</string>
    <string name="km_traveled">Km Traveled</string>
    <string name="calculate">Calculate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="calculate_autonomy">Calculate Autonomy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_wifi">No connect wi-fi :(</string>
    <string name="response_error">Error connection of data. Try agan.</string>
    <string name="saved_calc">saved_calc</string>
</resources>