<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calculate_autonomy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClose" />

    <EditText
        android:id="@+id/editTextPriceKwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/price_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/editTextKmPrecorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/km_traveled"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@+id/editTextPriceKwh"
        app:layout_constraintStart_toStartOf="@+id/editTextPriceKwh"
        app:layout_constraintTop_toBottomOf="@+id/editTextPriceKwh" />

    <Button
        android:id="@+id/buttonCalculatorAuto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/editTextKmPrecorrido"
        app:layout_constraintStart_toStartOf="@+id/editTextKmPrecorrido"
        app:layout_constraintTop_toBottomOf="@+id/editTextKmPrecorrido" />

    <TextView
        android:id="@+id/textViewResult"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/buttonCalculatorAuto"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculatorAuto" />

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>